--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 			
 			<div class="row">
 		  <div class="col-lg-4">
-			  <img id="chris" class="img-fluid" src="images/leaf2.png" alt="">
+			  <img class="img-fluid" src="images/leaf2.png" width="100%" alt="">
 				</div>
-		<div class="col-lg-3">
+		<div class="col-lg-4">
 		  <h2></h2>
 				<ul id="serviceslist" class="text-center">
 					<li>Graphic Design</li>
@@ -149,7 +149,7 @@
 			</div>
 				
 				<div class="col-lg-4">
-			  <img id="chris" class="img-fluid" src="images/leaf.png" alt="">
+			  <img class="img-fluid" src="images/leaf.png" width="100%" alt="">
 				</div>
 				
 			</div>
