--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
   
 			
 			<div class="row">
-		  <div class="col-lg-3">
+		  <div class="col-sm-3">
 			  <img class="img-fluid" src="images/leaf2.png" width="100%" alt="">
 				</div>
-		<div class="col-lg-5">
+		<div class="col-sm-5">
 		  <h2></h2>
 				<ul id="serviceslist" class="text-center">
 					<li>Graphic Design</li>
@@ -154,7 +154,7 @@
 				</ul>
 			</div>
 				
-				<div class="col-lg-3">
+				<div class="col-sm-3">
 			  <img class="img-fluid" src="images/leaf.png" width="100%" alt="">
 				</div>
 				
