add github source

--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
 				  <div class="d-flex flex-row-reverse">
 					  <div class="p-2">
   <i class="fab fa-linkedin"></i>
-						  <a href="https://www.linkedin.com/in/alyson-isherwood/" class="link">Find me on LinkedIn</a>
+	<a href="https://www.linkedin.com/in/alyson-isherwood/" class="link">Find me on LinkedIn</a>
+				<br>
+		 <a href="https://github.com/aisherwo/portfolio" class="link">Check out the source code on GitHub</a>
 					  </div>
 </div>
 	</div>
