--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
       <a name="anchor2"></a>
 <section class="about">
 	  <div class="row">
-		<div class="col-sm-4">
-			<h2 class= "text-center">About Me
+<h2>About Me
     </h2>
+		<div class="col-sm-4">
+	
 			<br>
 			<p class= "text-center">Born and raised in Thunder Bay, Ontario, I have always been heavily inspired my art. By the age or 4, I was consistently drawing cartoon characters I saw on TV, before eventually trying out realism as I got older. <br>
 			After graduating high school and pursuing an undergraduate degree in Psychology at Lakehead University, I decided it was time to try and pursue my lifelong dream of creating art for a living. I packed my bags and moved to BC for a change of scenery and hopefully some inspiration. <br>
