--- a/index.html
+++ b/index.html
@@ -101,16 +101,15 @@
 
       <a name="anchor2"></a>
 <section class="about">
-	  <div class="row">
-<h2>About Me
-    </h2>
-		<div class="col-sm-4">
+	<h2>About Me</h2>
+	  	<div class="row">
+			<div class="col-sm-4">
 	
 			<br>
-			<p class= "text-center">Born and raised in Thunder Bay, Ontario, I have always been heavily inspired my art. By the age or 4, I was consistently drawing cartoon characters I saw on TV, before eventually trying out realism as I got older. <br>
-			After graduating high school and pursuing an undergraduate degree in Psychology at Lakehead University, I decided it was time to try and pursue my lifelong dream of creating art for a living. I packed my bags and moved to BC for a change of scenery and hopefully some inspiration. <br>
+				<p class= "text-center">Born and raised in Thunder Bay, Ontario, I have always been heavily inspired my art. By the age or 4, I was consistently drawing cartoon characters I saw on TV, before eventually trying out realism as I got older. <br>
+				After graduating high school and pursuing an undergraduate degree in Psychology at Lakehead University, I decided it was time to try and pursue my lifelong dream of creating art for a living. I packed my bags and moved to BC for a change of scenery and hopefully some inspiration. <br>
 				This move not only inspired my art as a whole, but drove me to pursue Graphic Design, and register for school again. <br> I came back to Thunder Bay and registered in the Interactive Media Development program. This program opened my eyes to a world of different forms of media. I now am passionate not only about graphic design, but 3D design and interactive development.
-         </p>
+        			 </p>
 			
 			  </div>	
 		<div class="col-sm-4">
