--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			
 			<div class="row">
 		  <div class="col-sm-4">
-			  <img class="img-fluid" src="images/leaf2.png" width="100%" height:"auto" alt="">
+			  <img class="img-fluid" src="images/leaf2.png" width="100%" alt="">
 				</div>
 		<div class="col-sm-4">
 		  <h2></h2>
@@ -155,7 +155,7 @@
 			</div>
 				
 				<div class="col-sm-4">
-			  <img class="img-fluid" src="images/leaf.png" width="100%" height:"auto" alt="">
+			  <img class="img-fluid" src="images/leaf.png" width="100%" alt="">
 				</div>
 				
 			</div>
