--- a/index.html
+++ b/index.html
@@ -132,34 +132,27 @@
   
 			
 			<div class="row">
-		  <div class="col-sm-4">
-			  <img class="img-fluid" src="images/leaf2.png" width="100%" alt="">
+		  <div class="col-lg-3">
+			  <img class="img-fluid" src="images/leaf2.png" width="100%"alt="">
 				</div>
-		<div class="col-sm-4">
+		<div class="col-lg-6">
 		  <h2></h2>
 				<ul id="serviceslist" class="text-center">
 					<li>Graphic Design</li>
-					<br>
 					<li>Interactive Development</li>
-					<br>
 					<li>3D Design</li>
-					<br>
 					<li>Web Design</li>
-					<br>
 					<li>Photography</li>
-					<br>
 					<li>Digital Art</li>
-					<br>
 					<li>Traditional Art</li>
 				</ul>
 			</div>
 				
-				<div class="col-sm-4">
-			  <img class="img-fluid" src="images/leaf.png" width="100%" alt="">
+				<div class="col-lg-3">
+			  <img id="chris" class="img-fluid" src="images/leaf.png" alt="">
 				</div>
 				
 			</div>
-			
 			
 			
 		   </section>
