--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 		<div class="icon">
 		  	<a href="www.facebook.com/fynialsonart" class="fab fa-facebook"></a>
 		 </div>
+		<div class="icon">
+		  <a href="www.instagram.com/alysonisherwoodart" class="fab fa-instagram"></a>
+		  </div>
+		<div class="icon">
+		  <a href="https://www.linkedin.com/in/alyson-isherwood/" class="fab fa-linkedin"></a>
+		  </div>
           <li class="nav-item active">
             <a class="nav-link" href="#">Home
               <span class="sr-only">(current)</span>
