--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1>ALYSON ISHERWOOD</h1>
+        <h1 class="headertext">ALYSON ISHERWOOD</h1>
         <p class="lead mb-0">Graphic Design, Photography, Interactive Experiences, 3D Design and more.</p>
       </div>
     </div>
