--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           	  <div class="container1">
   <img src="images/guccivsguess.png" alt="Avatar" class="image1" style="width:100%">
   <div class="middle">
-	  <a href="gucci.html"><div class="text">Gucci vs Guess</div></a>
+	  <a href="gucci.html"><div class="text">YouTube Videos</div></a>
   </div>
 </div>
        
