--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
 	
 			<div>
 	  <a name="anchor3"></a>
-		
+	
+				<a class="m-0 text-center" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faisherwo.github.io%2Fportfolio1%2Findex.html"><small>Validated on W3C Validator</small></a>	
       <p class="m-0 text-center">Copyright &copy; Alyson Isherwood</p>
     </div>
 	  
