--- a/index.html
+++ b/index.html
@@ -316,8 +316,15 @@
 			<div class="col-3">
 				  <div class="d-flex flex-row-reverse">
 					  <div class="p-2">
-  <i class="fab fa-linkedin"></i>
-	<a href="https://www.linkedin.com/in/alyson-isherwood/" class="link">Find me on LinkedIn</a>
+<div class="icon">
+		  	<a href="www.facebook.com/fynialsonart" class="fab fa-facebook"></a>
+		 </div>
+		<div class="icon">
+		  <a href="www.instagram.com/alysonisherwoodart" class="fab fa-instagram"></a>
+		  </div>
+		<div class="icon">
+		  <a href="https://www.linkedin.com/in/alyson-isherwood/" class="fab fa-linkedin"></a>
+		  </div>
 				<br>
 		 <a href="https://github.com/aisherwo/portfolio" class="link">Check out the source code on GitHub</a>
 					  </div>
