--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="twitter:image" content="https://i.imgur.com/kzL0mRy.png" />
 
 
-  <title>Alyson Isherwood</title>
+  <title>Alyson Isherwood | Home</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
