--- a/robobunny.html
+++ b/robobunny.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alyson Isherwood | Home</title>
+  <title>Alyson Isherwood | RoboBunny</title>
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
