updated services section to include programs list

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	  <a name="anchor5"></a>
 	  
 	  <section class="services">
- <h2 class="text-center">Services
+ <h2 class="text-center">What Can I Do?
     </h2>
   
 			
@@ -174,7 +174,6 @@
 			  <img class="img-fluid" src="images/leaf2.png" width="100%"alt="">
 				</div>
 		<div class="col-lg-6">
-		  <h2></h2>
 				<ul id="serviceslist" class="text-center">
 					<li>Graphic Design</li>
 					<li>Interactive Development</li>
@@ -184,6 +183,29 @@
 					<li>Digital Art</li>
 					<li>Traditional Art</li>
 				</ul>
+			<p id="text1" class="text-center">I am skilled in<p>
+			<div class ="row">
+				<div class="col-lg-6">
+				<ul id="programslist" class="text-center">
+					<li>HTML, CSS, javaScript</li>
+					<li>Adobe Illustrator</li>
+					<li>Adobe Photoshop</li>
+					<li>Adobe XD</li>
+					<li>Adobe After Effects</li>
+					<li>Adobe Animate</li>
+				</ul>
+				</div>
+				<div class="col-lg-6">
+				<ul id="programslist" class="text-center">
+					<li>Adobe Premier</li>
+					<li>Adobe InDesign</li>
+					<li>Autodesk 3DS Max</li>
+					<li>Autodesk Mudbox</li>
+					<li>Unity</li>
+					<li>Visual Studio Code</li>
+				</ul>
+				</div>
+			</div>
 			</div>
 				
 				<div class="col-lg-3">
