--- a/robobunny.html
+++ b/robobunny.html
@@ -64,10 +64,13 @@
 	<!-- page content -->
 	
 	
+<section class="services">	
 <div class="container">
-<section class="projects">
+
+			<a name="robobun"></a>
          
-  <h1>RoboBunny</h1>
+         <h1>RoboBunny
+  </h1>
 
   <!-- Portfolio Item Row -->
   <div class="row">
@@ -122,6 +125,34 @@
 
   </div>
   <!-- /.row -->
+	
+	<!-- Related Projects Row -->
+   <h3 class="my-4">Other Projects</h3>
+
+  <div class="row">
+
+    <div class="col-md-4">
+      <a href="gucci.html">
+	      <h3>Gucci Vs Guess</h3>
+            <img class="img-fluid" src="images/guccivsguess.png" alt="">
+          </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="pepper.html">
+	      <h3>Professor Pepper</h3>
+            <img class="img-fluid" src="images/pepper.png" alt="">
+          </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="parallax.html">
+	      <h3>Parallax Background</h3>
+            <img class="img-fluid" src="images/parallax.png" alt="">
+          </a>
+    </div>
+
+  </div>
           
 			</section>
 
