--- a/robobunny.html
+++ b/robobunny.html
@@ -31,7 +31,7 @@
 <body>
 
   <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="topbar">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="topbar">
     <div class="container" >
       <a class="navbar-brand" href="#">Alyson Isherwood</a><a class="phone" href="tel:807-626-3032">(807) 626-3032</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,17 +40,17 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="index.html">Home
             </a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link" href="#anchor2">About Me</a>
+            <a class="nav-link" href="index.html">About Me</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link" href="#anchor5">Services</a>
+            <a class="nav-link" href="index.html">Services</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link" href="#anchor4">Portfolio</a>
+            <a class="nav-link" href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#anchor3">Contact</a>
