--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
 		 <h2 class= "text-center">So Why Hire Me?
 	</h2>
 			<div class="textbackground">
-			<p class= "text-center">I am skilled in multiple areas of digital media which makes me able to work in a variety of different positions and atmospheres. I have experience working on individual projects as well as in teams of all sizes. I have a unique style and can come up with new, fresh ideas, as well as follow directions to ensure my client's vision is captured. For more examples of my work <a href="#anchor4">check out my portfolio.</a> For more about what I can do, <a href="#anchor5">check out what services I offer.</a> Or, find out how to contact me below. 
+			<p class= "text-center">I am skilled in multiple areas of digital media which makes me able to work in a variety of different positions and atmospheres. I have experience working on individual projects as well as in teams of all sizes. I have a unique style and can come up with new, fresh ideas, as well as follow directions 
+				to ensure my client's vision is captured. For more examples of my work <a class="inline" href="#anchor4">check out my portfolio.</a> For more about what I can do, <a class="inline" href="#anchor5">check out what services I offer.</a> Or, find out how to contact me below. 
          </p>
 			</div>	
 		</section>
@@ -350,7 +351,7 @@
       58 Melon St <br>
       Thunder Bay, ON <br>
       alyson_isherwood@live.com <br>
-		<a href="tel:807-632-8696">(807) 632-8696</a>
+		<a class="inline" href="tel:807-632-8696">(807) 632-8696</a>
 		</p>
 				 <a name="anchor3"></a>
 			</div>
