--- a/parallax.html
+++ b/parallax.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alyson Isherwood | Parallax Background</title>
+  <title>Alyson Isherwood | Home</title>
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -20,6 +20,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/custom.css" rel="stylesheet">
@@ -61,7 +62,7 @@
 	
 	<!-- page content -->
 	
-		   <section class="pepper">
+		   <section class="services">
          <div class="container">
 
   <!-- Portfolio Item Heading -->
@@ -76,7 +77,7 @@
 
 <div class="video">
     <video loop preload="none" style="width:100%; height:auto">
-      <source src="videos/PARALLAX.mp4" type="video/mp4">
+      <source src="videos/PARALLAX1.mp4" type="video/mp4">
       
     Your browser does not support the video tag.
     </video>
@@ -100,47 +101,52 @@
   </div>
   <!-- /.row -->
 
+		 <h3>Progress Photos</h3>		 
+		 
   <div class="row">
 
     <div class="col-md-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/progress.png" alt="">
           </a>
     </div>
 
     <div class="col-md-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/progress1.png" alt="">
           </a>
     </div>
 
     <div class="col-md-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/parallax.png" alt="">
           </a>
     </div>
 
   </div>
 		 
-		 <h3 class="my-4">Related Projects</h3>
+		  <h3 class="my-4">Other Projects</h3>
 
   <div class="row">
 
     <div class="col-md-4">
-      <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+      <a href="gucci.html">
+	      <h3>Gucci Vs Guess</h3>
+            <img class="img-fluid" src="images/guccivsguess.png" alt="">
           </a>
     </div>
 
     <div class="col-md-4">
-      <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+      <a href="pepper.html">
+	      <h3>Professor Pepper</h3>
+            <img class="img-fluid" src="images/pepper.png" alt="">
           </a>
     </div>
 
     <div class="col-md-4">
-      <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+      <a href="robobunny.html">
+	      <h3>RoboBunny</h3>
+            <img class="img-fluid" src="images/robot01.png" alt="">
           </a>
     </div>
 
@@ -149,6 +155,7 @@
 			   
 			   </div>
 		   </section>
+
 
 		 
   <footer class="py-5" id="botbar">
