--- a/gucci.html
+++ b/gucci.html
@@ -121,19 +121,22 @@
   <div class="row">
 
     <div class="col-4">
-      <a href="#">
+      <a href="pepper.html">
+	      <h3>Professor Pepper</h3>
             <img class="img-fluid" src="images/pepper.png" alt="">
           </a>
     </div>
 
     <div class="col-4">
-      <a href="#">
+      <a href="parallax.html">
+	      <h3>Parallax Background</h3>
             <img class="img-fluid" src="images/parallax.png" alt="">
           </a>
     </div>
 
     <div class="col-4">
-      <a href="#">
+      <a href="robobunny.html">
+	      <h3>RoboBunny</h3>
             <img class="img-fluid" src="images/robot01.jpg" alt="">
           </a>
     </div>
