fixed <title> and progress photos

--- a/parallax.html
+++ b/parallax.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alyson Isherwood | Home</title>
+  <title>Alyson Isherwood | Parallax Background</title>
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -82,7 +82,7 @@
     Your browser does not support the video tag.
     </video>
   </div>
-  <p>Hover mouse over video :) </p>
+  <p>Hover mouse over video</p>
 </div>
 
     </div>
@@ -107,13 +107,13 @@
 
     <div class="col-md-4">
       <a href="#">
-            <img class="img-fluid" src="images/progress.png" alt="">
+            <img class="img-fluid" src="images/progress.jpg" alt="">
           </a>
     </div>
 
     <div class="col-md-4">
       <a href="#">
-            <img class="img-fluid" src="images/progress1.png" alt="">
+            <img class="img-fluid" src="images/progress2.png" alt="">
           </a>
     </div>
 
