updated info on page

--- a/pepper.html
+++ b/pepper.html
@@ -89,13 +89,12 @@
 
     <div class="col-md-4">
       <h3 class="my-3">Project Description</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+      <p>Professor Pepper is an interactive HTML5 Canvas game prototype I created. The video to the left shows a clip of what the gameplay looks like. <br> To play the game yourself, visit <a href="www.alysonisherwood.com>this link.</a></p>
       <h3 class="my-3">Project Details</h3>
       <ul>
-        <li>Lorem Ipsum</li>
-        <li>Dolor Sit Amet</li>
-        <li>Consectetur</li>
-        <li>Adipiscing Elit</li>
+        <li>Animation done in Adobe Animate</li>
+        <li>Development tools: HTML5, javaScript</li>
+        <li>Illustrations done in Adobe Illustrator</li>
       </ul>
     </div>
 
