fixed <title> and project details

--- a/robobunny.html
+++ b/robobunny.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alyson Isherwood | Home</title>
+  <title>Alyson Isherwood | RoboBunny</title>
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -86,13 +86,13 @@
 
     <div class="col-md-4">
       <h3 class="my-3">RoboBunny</h3>
-      <p>"RoboBunny" November 2018</p>
+      <p>"RoboBunny" is a 3D character created in AutoDesk 3DS Max. He was inspired by my two pet bunnies I have, Yuki and Thor. His original purpose was to be a game character, however the project was never completed.</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
-        <li>Lorem Ipsum</li>
-        <li>Dolor Sit Amet</li>
-        <li>Consectetur</li>
-        <li>Adipiscing Elit</li>s
+        <li>Autodesk 3DS Max</li>
+        <li>Scanline Renderer</li>
+        <li>November 2018</li>
+  
       </ul>
     </div>
 
