--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
  <h2 class="text-center">What Can I Do?
     </h2>
 			<div class="row">
-		  <div class="col-lg-3">
-			  <img class="img-fluid" src="images/leaf2.png" width="100%"alt="">
+		  <div class="col-sm-3">
+			  <img class="img-fluid" src="images/leaf2.png" alt="">
 				</div>
 		<div class="col-lg-6">
 				<ul id="serviceslist" class="text-center">
@@ -195,7 +195,7 @@
 				</ul>
 			<p id="text1" class="text-center">I am skilled in<p>
 			<div class ="row">
-				<div class="col-lg-6">
+				<div class="col-sm-6">
 				<ul id="programslist" class="text-center">
 					<li>HTML, CSS, javaScript</li>
 					<li>Adobe Illustrator</li>
@@ -205,7 +205,7 @@
 					<li>Adobe Animate</li>
 				</ul>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-sm-6">
 				<ul id="programslist" class="text-center">
 					<li>Adobe Premier</li>
 					<li>Adobe InDesign</li>
@@ -218,7 +218,7 @@
 			</div>
 			</div>
 				
-				<div class="col-lg-3">
+				<div class="col-sm-3">
 			  <img id="chris" class="img-fluid" src="images/leaf.png" alt="">
 				</div>
 				
