--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
 				</ul>
 			<p id="text1" class="text-center">I am skilled in<p>
 			<div class ="row">
-				<div class="col-sm-6">
+				<div class="col-sm=3"></div>
+				<div class="col-sm-3">
 				<ul id="programslist" class="text-center">
 					<li>HTML, CSS, javaScript</li>
 					<li>Adobe Illustrator</li>
@@ -205,7 +206,7 @@
 					<li>Adobe Animate</li>
 				</ul>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-3">
 				<ul id="programslist" class="text-center">
 					<li>Adobe Premier</li>
 					<li>Adobe InDesign</li>
@@ -215,6 +216,7 @@
 					<li>Visual Studio Code</li>
 				</ul>
 				</div>
+				<div class="col-sm=3"></div>
 			</div>
 			</div>
 				
