--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				</ul>
 			<p id="text1" class="text-center">I am skilled in<p>
 			<div class ="row">
-				<div class="col-sm=3"></div>
+				<div class="col-sm-3"></div>
 				<div class="col-sm-3">
 				<ul id="programslist" class="text-center">
 					<li>HTML, CSS, javaScript</li>
