--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h1 class="headertext">ALYSON ISHERWOOD</h1>
         <p class="lead mb-0">Graphic Design, Photography, Interactive Experiences, 3D Design and more.</p>
       </div>
-	    <a href="#anchor2"> <div class='icon-scroll'><div/></a>
+	     <div class='icon-scroll'><div/>
     </div>
   </div>
  <div class="scroll-downs">
