--- a/pepper.html
+++ b/pepper.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alyson Isherwood | Home</title>
+  <title>Alyson Isherwood | Professor Pepper</title>
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -82,7 +82,7 @@
     Your browser does not support the video tag.
     </video>
   </div>
-  Hover mouse over video. Desktop only [ Obviously! ;) ]
+	 <p> Hover mouse over video.</p> 
 </div>
 
     </div>
