--- a/pepper.html
+++ b/pepper.html
@@ -36,10 +36,21 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+	
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+		<div class="icon">
+		  	<a href="www.facebook.com/fynialsonart" class="fab fa-facebook"></a>
+		 </div>
+		<div class="icon">
+		  <a href="www.instagram.com/alysonisherwoodart" class="fab fa-instagram"></a>
+		  </div>
+		<div class="icon">
+		  <a href="https://www.linkedin.com/in/alyson-isherwood/" class="fab fa-linkedin"></a>
+		  </div>
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
             </a>
           </li>
 		<li class="nav-item">
