--- a/parallax.html
+++ b/parallax.html
@@ -49,8 +49,7 @@
 		  <a href="https://www.linkedin.com/in/alyson-isherwood/" class="fab fa-linkedin"></a>
 		  </div>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
+            <a class="nav-link" href="index.html">Home
             </a>
           </li>
 		<li class="nav-item">
