--- a/robobunny.html
+++ b/robobunny.html
@@ -49,8 +49,8 @@
 		  <a href="https://www.linkedin.com/in/alyson-isherwood/" class="fab fa-linkedin"></a>
 		  </div>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
+            <a class="nav-link" href="index.html">Home
+              
             </a>
           </li>
 		<li class="nav-item">
@@ -61,6 +61,7 @@
           </li>
 		<li class="nav-item">
             <a class="nav-link" href="index.html">Portfolio</a>
+	<span class="sr-only">(current)</span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#anchor3">Contact</a>
