--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				</ul>
 				</div>
 				<div class="col-sm-3">
-				<ul id="programslist" class="text-center">
+				<ul id="programslist2" class="text-center">
 					<li>Adobe Premier</li>
 					<li>Adobe InDesign</li>
 					<li>Autodesk 3DS Max</li>
